--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
         <div id="Container">{{rendered}}</div>
-        <script src="client.js"></script>
+        <script type="module" src="/client/client.jsx"></script>
     </body>
 </html>
